[package]
name = "curve-editor-sample"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { version = "27", features = ["webgl"] }
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = { version = "0.33", default-features = false }
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
web-time = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window"] }
